--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,13 @@
     }
   ],
   "require": {
+    "laravel/framework": "7.0.0",
     "illuminate/database": "*",
     "jeremeamia/superclosure": "*",
     "microweber-packages/microweber-helpers": "dev-master"
   },
   "require-dev": {
-    "orchestra/testbench": "4.*",
+    "orchestra/testbench": "*",
     "mockery/mockery": "*"
   },
   "autoload": {
